--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
+.container {
+  background-color: rgb(214, 182, 182);
+}
+
+#weatherBox {
   text-align: center;
+  background-color: blue;
+  margin: 30px auto;
+  height: 70vh;
+  width: 70vw;
+  max-width: 800px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.timeList {
+  list-style: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.timeBar {
+  margin: 10px;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
 }
